Sensores de janela RF agora são persistentes de acordo com:
https://community.home-assistant.io/t/sonoff-rf-bridge-strategies-for-receiving-data/108181

--- a/automations.yaml
+++ b/automations.yaml
@@ -46,3 +46,13 @@
       data:
         topic: "cmnd/sonoffs/STATUS"
         payload: "0"
+
+- alias: 'rfbridge_demultiplexer'
+  trigger:
+  - platform: mqtt
+    topic: tele/rfbridge/RESULT
+  action:
+  - service: python_script.rfbridge_demux
+    data_template:
+      payload: '{{trigger.payload_json.RfReceived.Data}}'
+
